testCamping/main/default/objects/Trail__c/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>Last inspection date</description>
    <inlineHelpText>Last inspection date</inlineHelpText>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>