testCamping/main/default/objects/Trail__c/fields/Next_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Date__c</fullName>
    <description>Next inspection date description</description>
    <inlineHelpText>Next inspection date help text</inlineHelpText>
    <label>Next Inspection Date</label>
    <type>Date</type>
</CustomField>